--- a/THANKS
+++ b/THANKS
@@ -471,3 +471,11 @@ dmcdonald - suggestion.
 wahyuamin - example file.
 
 abautu - suggestions.
+
+Jan Losinski - suggestions.
+
+mrtvillaret - suggestion.
+
+alienglow - suggestion.
+
+noddy11 - suggestion.
