--- a/THANKS
+++ b/THANKS
@@ -457,3 +457,7 @@ math user - suggestion.
 ChicagoPianoTuner - suggestion.
 
 MING-KIAN JONATHAN CEDRIC LEE KIM GNOK - suggestion.
+
+daltinkurt - suggestion.
+
+Léo-Paul Roch - suggestion.
